--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
   <style>
     :root {
       --bg: #020617;
-      --bg-soft: #020617;
       --card: #020617;
       --accent: #f97316;
-      --accent-soft: rgba(249, 115, 22, 0.18);
+      --accent-soft: rgba(249, 115, 22, 0.12);
       --text: #f9fafb;
       --muted: #9ca3af;
       --danger: #fca5a5;
       --border-subtle: rgba(148, 163, 184, 0.35);
-      --radius-xl: 22px;
+      --radius-xl: 20px;
     }
 
     * {
@@ -30,25 +29,22 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background:
-        radial-gradient(circle at top, #111827 0, #020617 45%, #000 100%);
+      background: radial-gradient(circle at top, #0f172a 0, #020617 50%, #000 100%);
       color: var(--text);
       padding: 20px 12px;
     }
 
     .frame {
-      max-width: 460px;
+      max-width: 440px;
       width: 100%;
     }
 
     .card {
-      background: radial-gradient(circle at 0 0, #020617, #020617 35%, #020617 100%);
+      background: var(--card);
       border-radius: var(--radius-xl);
       padding: 22px 20px 18px;
       border: 1px solid var(--border-subtle);
-      box-shadow:
-        0 30px 60px rgba(0, 0, 0, 0.9),
-        0 0 0 1px rgba(15, 23, 42, 0.6);
+      box-shadow: 0 26px 50px rgba(0, 0, 0, 0.9);
       position: relative;
       overflow: hidden;
     }
@@ -56,10 +52,9 @@
     .card::before {
       content: "";
       position: absolute;
-      inset: -60%;
+      inset: -40%;
       background:
-        radial-gradient(circle at 0 0, rgba(249, 115, 22, 0.16), transparent 55%),
-        radial-gradient(circle at 100% 0, rgba(96, 165, 250, 0.18), transparent 55%);
+        radial-gradient(circle at 0 0, rgba(249, 115, 22, 0.14), transparent 55%);
       opacity: 0.9;
       pointer-events: none;
     }
@@ -73,11 +68,11 @@
       display: flex;
       justify-content: space-between;
       gap: 12px;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
     }
 
     .title-block h1 {
-      margin: 0 0 6px;
+      margin: 0 0 4px;
       font-size: 1.6rem;
       display: flex;
       align-items: center;
@@ -86,7 +81,6 @@
 
     .jar-emoji {
       font-size: 1.8rem;
-      filter: drop-shadow(0 4px 10px rgba(15, 23, 42, 0.9));
     }
 
     .subtitle {
@@ -102,8 +96,8 @@
       text-transform: uppercase;
       padding: 4px 10px;
       border-radius: 999px;
-      border: 1px solid rgba(148, 163, 184, 0.6);
-      background: rgba(15, 23, 42, 0.9);
+      border: 1px solid rgba(148, 163, 184, 0.7);
+      background: rgba(15, 23, 42, 0.95);
       color: var(--muted);
       white-space: nowrap;
     }
@@ -112,7 +106,7 @@
       margin-top: 18px;
       display: grid;
       grid-template-columns: auto 1fr;
-      gap: 16px;
+      gap: 18px;
       align-items: center;
     }
 
@@ -123,8 +117,8 @@
       border: 3px solid rgba(148, 163, 184, 0.85);
       position: relative;
       background:
-        radial-gradient(circle at 20% 0, rgba(255, 255, 255, 0.25), transparent 55%),
-        radial-gradient(circle at 80% 0, rgba(148, 163, 184, 0.35), transparent 60%);
+        radial-gradient(circle at 20% 0, rgba(255, 255, 255, 0.22), transparent 55%),
+        radial-gradient(circle at 80% 0, rgba(148, 163, 184, 0.3), transparent 60%);
       overflow: hidden;
     }
 
@@ -137,9 +131,7 @@
       height: 24px;
       border-radius: 999px;
       background: linear-gradient(to right, #4b5563, #9ca3af);
-      box-shadow:
-        0 4px 10px rgba(0, 0, 0, 0.7),
-        inset 0 0 0 1px rgba(15, 23, 42, 0.6);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
     }
 
     .jar-fill {
@@ -156,10 +148,10 @@
       position: absolute;
       inset: 12px;
       border-radius: 40px;
-      border: 1px solid rgba(148, 163, 184, 0.4);
+      border: 1px solid rgba(148, 163, 184, 0.35);
       box-shadow:
-        inset 0 0 0 1px rgba(15, 23, 42, 0.9),
-        inset 12px 0 18px rgba(15, 23, 42, 0.96);
+        inset 0 0 0 1px rgba(15, 23, 42, 1),
+        inset 10px 0 16px rgba(15, 23, 42, 0.95);
       pointer-events: none;
     }
 
@@ -193,7 +185,7 @@
     }
 
     .status {
-      margin-top: 6px;
+      margin-top: 8px;
       font-size: 0.9rem;
       color: var(--muted);
       min-height: 1.4em;
@@ -204,33 +196,15 @@
       font-weight: 500;
     }
 
-    .bar-wrap {
-      margin-top: 10px;
-    }
-
-    .bar-bg {
-      width: 100%;
-      height: 6px;
-      border-radius: 999px;
-      background: rgba(15, 23, 42, 0.9);
-      border: 1px solid rgba(30, 64, 175, 0.6);
-      overflow: hidden;
-    }
-
-    .bar-fill {
-      height: 100%;
-      width: 100%;
-      border-radius: 999px;
-      background: linear-gradient(to right, #f97316, #facc15);
-      transform-origin: left center;
-      transform: scaleX(1);
-      transition: transform 0.25s ease-out;
-    }
-
-    .bar-caption {
-      margin-top: 4px;
-      font-size: 0.8rem;
+    .baseline {
+      margin-top: 14px;
+      font-size: 0.85rem;
       color: var(--muted);
+    }
+
+    .divider {
+      margin-top: 16px;
+      border-top: 1px solid rgba(31, 41, 55, 0.9);
     }
 
     .buttons {
@@ -238,8 +212,7 @@
       flex-wrap: wrap;
       gap: 8px;
       justify-content: center;
-      margin-top: 18px;
-      margin-bottom: 6px;
+      margin-top: 16px;
     }
 
     button {
@@ -291,15 +264,6 @@
       box-shadow: none;
     }
 
-    .subtle {
-      background: rgba(15, 23, 42, 0.9);
-      color: var(--muted);
-    }
-
-    .subtle:hover {
-      color: var(--text);
-    }
-
     .accent {
       background: var(--accent-soft);
       color: var(--accent);
@@ -307,7 +271,34 @@
     }
 
     .accent:hover {
-      background: rgba(249, 115, 22, 0.24);
+      background: rgba(249, 115, 22, 0.2);
+    }
+
+    .subtle {
+      background: rgba(15, 23, 42, 0.95);
+      color: var(--muted);
+    }
+
+    .subtle:hover {
+      color: var(--text);
+    }
+
+    .decision-block {
+      margin-top: 14px;
+      font-size: 0.85rem;
+    }
+
+    .decision-label {
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      font-size: 0.72rem;
+      color: var(--muted);
+      margin-bottom: 4px;
+    }
+
+    .decision-text {
+      color: var(--text);
+      min-height: 1.4em;
     }
 
     .note {
@@ -316,8 +307,8 @@
       color: var(--muted);
       padding: 8px 10px;
       border-radius: 999px;
-      background: rgba(15, 23, 42, 0.9);
-      border: 1px dashed rgba(148, 163, 184, 0.6);
+      background: rgba(15, 23, 42, 0.95);
+      border: 1px dashed rgba(148, 163, 184, 0.7);
       display: flex;
       align-items: center;
       gap: 6px;
@@ -352,11 +343,9 @@
         padding-left: 0;
       }
 
-      .status {
-        text-align: center;
-      }
-
-      .bar-caption {
+      .status,
+      .baseline,
+      .decision-block {
         text-align: center;
       }
     }
@@ -373,11 +362,11 @@
               Jar of Fucks
             </h1>
             <p class="subtitle">
-              A darkly honest way to track how much emotional energy you actually have for
-              people, problems and bullshit today.
+              A small daily dashboard for how much you honestly have to give,
+              so you stop acting like your energy is unlimited.
             </p>
           </div>
-          <div class="pill">Emotional capacity tracker</div>
+          <div class="pill">Daily capacity</div>
         </div>
 
         <div class="main">
@@ -388,23 +377,20 @@
           </div>
 
           <div class="stats">
-            <div class="label">Remaining fucks</div>
+            <div class="label">Remaining fucks today</div>
             <div class="count-row">
               <div class="count-value" id="countValue">–</div>
               <div class="count-unit" id="countUnit">fucks</div>
             </div>
             <div class="status" id="statusText"></div>
 
-            <div class="bar-wrap">
-              <div class="bar-bg">
-                <div class="bar-fill" id="barFill"></div>
-              </div>
-              <div class="bar-caption" id="barCaption">
-                This is how much of yourself you have left to hand out.
-              </div>
-            </div>
+            <p class="baseline">
+              This is your daily fuck budget. You do not have to spend all of it.
+            </p>
           </div>
         </div>
+
+        <div class="divider"></div>
 
         <div class="buttons">
           <button class="primary" id="giveBtn">✋ Give a fuck</button>
@@ -412,11 +398,18 @@
           <button class="subtle" id="resetBtn">♻ Refill jar</button>
         </div>
 
+        <div class="decision-block">
+          <div class="decision-label">Latest decision</div>
+          <div class="decision-text" id="decisionText">
+            No decisions logged yet. You are still hoarding your fucks.
+          </div>
+        </div>
+
         <div class="note">
           <div class="note-dot"></div>
           <div>
-            Nothing is stored on a server. This is just a private little dashboard
-            for your own boundaries, not therapy or advice.
+            Reset happens once per day the first time you open this.
+            Everything stays in your browser. This is not therapy. It is a boundary reminder.
           </div>
         </div>
       </div>
@@ -424,99 +417,132 @@
   </div>
 
   <script>
-    // Config: how many fucks you start with
+    // Config
     const STARTING_FUCKS = 10;
-    const STORAGE_KEY = "virtualJarOfFucks:v1";
+    const STORAGE_KEY = "virtualJarOfFucks:v2";
 
     const countEl = document.getElementById("countValue");
     const unitEl = document.getElementById("countUnit");
     const statusEl = document.getElementById("statusText");
-    const barFillEl = document.getElementById("barFill");
-    const barCaptionEl = document.getElementById("barCaption");
     const jarFillEl = document.getElementById("jarFill");
+    const decisionEl = document.getElementById("decisionText");
 
     const giveBtn = document.getElementById("giveBtn");
     const resetBtn = document.getElementById("resetBtn");
     const randomBtn = document.getElementById("randomBtn");
 
     let remaining = STARTING_FUCKS;
+    let lastReset = null;
+
+    function todayKey() {
+      const now = new Date();
+      const year = now.getFullYear();
+      const month = String(now.getMonth() + 1).padStart(2, "0");
+      const day = String(now.getDate()).padStart(2, "0");
+      // Represents the calendar day. When this changes, jar resets next load.
+      return `${year}-${month}-${day}`;
+    }
 
     function load() {
       try {
-        const saved = localStorage.getItem(STORAGE_KEY);
-        if (saved !== null) {
-          const num = parseInt(saved, 10);
-          if (!isNaN(num)) remaining = num;
+        const savedRaw = localStorage.getItem(STORAGE_KEY);
+        const today = todayKey();
+
+        if (!savedRaw) {
+          remaining = STARTING_FUCKS;
+          lastReset = today;
+          save();
+          return;
+        }
+
+        const saved = JSON.parse(savedRaw);
+        if (saved && typeof saved.remaining === "number" && typeof saved.lastReset === "string") {
+          // If the saved day is today, keep the remaining value
+          if (saved.lastReset === today) {
+            remaining = saved.remaining;
+            lastReset = saved.lastReset;
+          } else {
+            // New calendar day, reset jar
+            remaining = STARTING_FUCKS;
+            lastReset = today;
+            save();
+          }
+        } else {
+          remaining = STARTING_FUCKS;
+          lastReset = today;
+          save();
         }
       } catch (e) {
-        // ignore
+        remaining = STARTING_FUCKS;
+        lastReset = todayKey();
+        save();
       }
     }
 
     function save() {
       try {
-        localStorage.setItem(STORAGE_KEY, String(remaining));
+        localStorage.setItem(
+          STORAGE_KEY,
+          JSON.stringify({ remaining, lastReset: lastReset || todayKey() })
+        );
       } catch (e) {
         // ignore
       }
     }
 
-    function updateUI(messageOverride) {
+    function updateUI() {
       const pct = Math.max(0, Math.min(1, remaining / STARTING_FUCKS));
-
       countEl.textContent = remaining;
       unitEl.textContent = remaining === 1 ? "fuck" : "fucks";
-
       jarFillEl.style.height = pct * 100 + "%";
-      barFillEl.style.transform = "scaleX(" + pct + ")";
 
       let msg = "";
-      let caption = "";
       let isEmpty = false;
 
       if (remaining <= 0) {
-        msg = "You are officially out of fucks. You owe no explanations.";
-        caption = "At this point the answer to almost everything is no.";
+        msg = "You are out of fucks for today. No is a complete sentence.";
         isEmpty = true;
         giveBtn.disabled = true;
       } else if (remaining <= 3) {
-        msg = "You’re running low. Maybe this does not deserve a fuck.";
-        caption = "You are in conservation mode. Default to protecting your energy.";
+        msg = "You are almost tapped out. Only real priorities get a yes.";
         giveBtn.disabled = false;
       } else {
-        msg = "You still have some capacity. Spend your fucks with intention.";
-        caption = "Every yes still costs you something. Make it worth a fuck.";
+        msg = "You have room to care about a few things. Choose on purpose.";
         giveBtn.disabled = false;
-      }
-
-      if (messageOverride) {
-        msg = messageOverride;
       }
 
       statusEl.textContent = msg;
       statusEl.className = "status" + (isEmpty ? " empty" : "");
-      barCaptionEl.textContent = caption;
+    }
+
+    function setDecision(text) {
+      decisionEl.textContent = text;
     }
 
     function giveAFuck() {
       if (remaining <= 0) return;
       remaining -= 1;
       save();
-      updateUI("You just spent one fuck on this. Hope it was worth it.");
+      updateUI();
+      setDecision("You chose to spend one fuck on this. You do not owe anyone more than that.");
     }
 
-    function resetJar() {
+    function resetJar(manual = false) {
       remaining = STARTING_FUCKS;
+      lastReset = todayKey();
       save();
-      updateUI("Fresh jar, new day. You do not have to spend all of these.");
+      updateUI();
+      if (manual) {
+        setDecision("You manually reset your jar. You get to start over whenever you decide to.");
+      }
     }
 
     function randomCare() {
       const options = [
-        "Absolutely not. This is above your current fuck pay grade.",
+        "Absolutely not. Your energy is already overbooked.",
         "Not today. Your nervous system voted no.",
         "Okay, fine, one fuck. That is all it gets.",
-        "Ask again after coffee and a snack.",
+        "Ask again after food and sleep.",
         "Emotionally you are on airplane mode."
       ];
       const choice = options[Math.floor(Math.random() * options.length)];
@@ -524,13 +550,14 @@
       if (choice.includes("one fuck") && remaining > 0) {
         remaining -= 1;
         save();
+        updateUI();
       }
 
-      updateUI(choice);
+      setDecision(choice);
     }
 
     giveBtn.addEventListener("click", giveAFuck);
-    resetBtn.addEventListener("click", resetJar);
+    resetBtn.addEventListener("click", () => resetJar(true));
     randomBtn.addEventListener("click", randomCare);
 
     load();
